# Projects

./: README.md
CSPM  Mecanumwheelcar/: .gitignore  LICENSE  README.md  car_state_20240617_202255.csv  car_state_20240617_202514.csv
CSPM  Mecanumwheelcar/3D_case/: DOF_ext_joint.stl
CSPM  Mecanumwheelcar/ESP32_Firmware/: platformio.ini
CSPM  Mecanumwheelcar/ESP32_Firmware/src/: main.cpp
CSPM  Mecanumwheelcar/LateX_Report/: AndroidApp.tex  Firmware.tex  MecanumCarSDK.tex  chapterPythonModule.tex  commandprotocoldesign.tex  lit_master.bib  mecanumwheel.tex  microcontrolleresp32.tex  powersystem.tex  report.tex  wifi_control.tex
CSPM  Mecanumwheelcar/LateX_Report/graphic/: Logo_THM_CF_FB11_4c.eps
CSPM  Mecanumwheelcar/MecanumCarApp/: settings.gradle.kts
CSPM  Mecanumwheelcar/Python_Software/: setup.py
CSPM  Mecanumwheelcar/Schematic/: Schematic_MecanumCar.fzz
IIOT Project/: .gitignore  .gitmodules  README.md
IIOT Project/demos/libmodbus-demo/: CMakeLists.txt  main.c
IIOT Project/encryption/: README.md  mt-lab-t4-ca.crt  mt-lab-t4-ca.key  mt-lab-t4-server.crt  mt-lab-t4-server.csr  mt-lab-t4-server.key
IIOT Project/material/: Register_-_MQTT_Topics.md
IIOT Project/report/: .gitignore  IIOT-Report.tex  IIOT-Report.txss2  compile.sh  sources.bib
IIOT Project/reports/: 01__23_11_16.md  02__23_11_16.md  03__23_11_28.md  04__23_12_07.md
IIOT Project/software/: MQTT_and_Matlab.m  docker-compose.yml  telegraf-emqx.conf
Indian Phone Market Data Analysis/: Data Cleaning.ipynb  EDA.ipynb  Phone_cleaned_data.csv  Streamlit GUI.py
Indian Phone Market Data Analysis/Web Scrapping/: Data Gathering.ipynb  Smartprix.py  Tabelt Data Gathering.ipynb  Tablet.py  Tablet_Uncleaned(smartprix).csv  ajio.py  campusx.py  phone.html  tablet.html
(+85 files in other folders)
